Resize displays, prevent overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,27 @@
+body {
+    font-family:Arial, Helvetica, sans-serif;
+}
 #calculator {
-    border: 2px solid blue;
+    border: 2px solid black;
+    height: 530px;
+    width: 320px;
+    background-color: rgb(48, 51, 51);
 }
 
 #calculator:active {
-    border: 2px solid red;
+    border: 2px solid gray;
+}
+
+#display {
+    color: white;
+    text-align: right;
+    font-size: 48px;
+    padding: 0px 20px 30px 0px;
+}
+
+#stored {
+    color: gray;
+    text-align: right;
+    font-size: 16px;
+    padding: 40px 25px 10px 0px;
 }
